--- a/admin/src/pages/productList/productList.css
+++ b/admin/src/pages/productList/productList.css
@@ -1,8 +1,8 @@
-.productList{
+.productList {
     flex: 4;
 }
 
-.productListItem{
+.productListItem {
     display: flex;
     align-items: center;
 }
@@ -13,19 +13,24 @@
     border-radius: 50%;
     object-fit: cover;
     margin-right: 10px;
-  }
+}
 
-.productListEdit{
+.productListEdit {
     border: none;
     border-radius: 10px;
     padding: 5px 10px;
-    background-color: #3bb077;
+    background-color: teal;
     color: white;
     cursor: pointer;
     margin-right: 20px;
 }
 
-.productListDelete{
+.productListDelete {
     color: red;
     cursor: pointer;
+}
+
+.middle {
+    display: flex;
+    align-items: center;
 }
