--- a/admin/src/pages/product/product.css
+++ b/admin/src/pages/product/product.css
@@ -1,6 +1,7 @@
 .product {
   flex: 4;
   padding: 20px;
+  height: 100vh;
 }
 
 .productTitleContainer {
@@ -10,7 +11,8 @@
 }
 
 .productAddButton {
-  width: 80px;
+  width: 100px;
+  margin-right: 20px;
   border: none;
   padding: 5px;
   background-color: teal;
@@ -37,10 +39,10 @@
 }
 
 .productInfoImg {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
-  object-fit: cover;
+  object-fit: contain;
   margin-right: 20px;
 }
 
@@ -84,47 +86,54 @@
   flex-direction: column;
 }
 
-.productFormLeft > label {
+.productFormLeft>label {
   margin-bottom: 10px;
   color: gray;
 }
 
-.productFormLeft > input {
+.productFormLeft>input {
+  width: 300px;
   margin-bottom: 10px;
   border: none;
   padding: 5px;
   border-bottom: 1px solid gray;
 }
 
-.productFormLeft >select{
+.productFormLeft>select {
   margin-bottom: 10px;
+  cursor: pointer;
 }
 
-.productUploadImg{
-  width: 100px;
-  height: 100px;
-  border-radius: 10px;
-  object-fit: cover;
-  margin-right: 20px;
-}
-
-.productFormRight{
+.productFormRight {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  align-items: center;
+  margin-right: 30px;
+  margin-top: 30px;
 }
 
-.productUpload{
+.productUploadImg {
+  width: 250px;
+  height: 250px;
+  border-radius: 10px;
+  object-fit: cover;
+  margin-bottom: 30px;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
+}
+
+.productUpload {
   display: flex;
   align-items: center;
 }
 
-.productButton{
+.productButton {
+  width: 150px;
   border: none;
-  padding: 5px;
+  padding: 10px;
   border-radius: 5px;
   background-color: darkblue;
-  color:white;
+  color: white;
   font-weight: 600;
   cursor: pointer;
+  margin-top: 50px;
 }
